# fabric-automation-bundles

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  fabric.schema.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  release.yml
advanced/drift/: index.html
advanced/policies/: index.html
advanced/state/: index.html
cicd/: azure-devops.yml  github-actions.yml
cicd/azure-devops/: index.html
cicd/github-actions/: index.html
cicd/overview/: index.html
cli/commands/: index.html
docs/: index.md  troubleshooting.md
docs/advanced/: drift.md  policies.md  state.md
docs/cicd/: azure-devops.md  github-actions.md  overview.md
docs/cli/: commands.md
docs/getting-started/: first-bundle.md  installation.md  quickstart.md
docs/guide/: development-workflows.md  fabric-yml.md  mcp-server.md  migrate-from-fabric-cicd.md  migrate-from-terraform.md  resource-types.md  secrets.md  security.md  service-principal.md  targets-variables.md  templates.md
docs/reference/: environment-variables.md
examples/: .cursorrules  CLAUDE.md  README.md
examples/.github/: copilot-instructions.md
examples/01-minimal/: fabric.yml
examples/02-medallion-lakehouse/: fabric.yml
examples/03-real-time-intelligence/: fabric.yml
examples/04-data-science/: fabric.yml
examples/05-multi-environment/: fabric.yml
examples/06-shortcuts-and-connections/: fabric.yml
examples/07-shortcut-transformations/: fabric.yml
fab_bundle/: __init__.py  cli.py
fab_bundle/engine/: audit.py  deployer.py  loader.py  metrics.py  notifications.py  planner.py  policy.py  resolver.py  secrets.py  state.py  state_backend.py
fab_bundle/generators/: reverse.py  templates.py
fab_bundle/mcp_server/: __init__.py  server.py
fab_bundle/models/: __init__.py  bundle.py
fab_bundle/providers/: fabric_api.py  graph_api.py
getting-started/first-bundle/: index.html
getting-started/installation/: index.html
search/: search_index.json
tests/: test_bundle.py  test_edge_cases.py  test_integration.py  test_new_features.py
troubleshooting/: index.html
(+54 files in other folders)
