[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-automation-bundles"
version = "0.4.0"
description = "Declarative project definitions for Microsoft Fabric"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Derek", email = "derek@pullportfolio.com"},
]
keywords = ["microsoft-fabric", "iac", "infrastructure-as-code", "declarative-automation-bundles", "ci-cd", "devops", "fabric-cli", "fabric-cicd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "azure-identity>=1.15.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
keyvault = ["azure-keyvault-secrets"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
]

[project.scripts]
fab-bundle = "fab_bundle.cli:cli"

[project.urls]
Homepage = "https://github.com/microsoft/fabric-automation-bundles"
Repository = "https://github.com/microsoft/fabric-automation-bundles"
Documentation = "https://microsoft.github.io/fabric-automation-bundles/"
Issues = "https://github.com/microsoft/fabric-automation-bundles/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fab_bundle*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
